testing and docs

--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@storybook/addon-a11y": "^6.5.16",
+    "@storybook/jest": "^0.0.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "jest": "^27.5.1",
     "polished": "^4.1.1",
     "prettier": "^2.8.3",
     "react": "^17.0.1",
@@ -22,7 +25,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "chromatic": "npx chromatic --project-token=3316c4d287c1"
+    "chromatic": "npx chromatic --project-token=3316c4d287c1",
+    "test-storybook": "test-storybook"
   },
   "eslintConfig": {
     "extends": [
@@ -72,6 +76,7 @@
     "@storybook/node-logger": "^6.5.16",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.5.16",
+    "@storybook/test-runner": "^0.9.4",
     "@storybook/testing-library": "^0.0.13",
     "chromatic": "^6.17.0"
   },
