Changelog for v0.1.0 [skip ci]

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 SKIP_PREFLIGHT_CHECK=true
+GH_TOKEN=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
+NPM_TOKEN=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
