--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.1",
     "react-is": "^18.2.0",
     "react-scripts": "4.0.3",
+    "storybook-addon-sass-postcss": "^0.1.3",
     "styled-components": "^5.3.6",
     "web-vitals": "^1.0.1"
   },
