--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "^2.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-is": "^18.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.6",
